# Summarizer

./: Makefile  README.md  docker-compose.prod.yaml  docker-compose.yml
.github/workflows/: main.yaml
project/: .coverage  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
project/db/: create.sql
project/src/app/: db.py  main.py
project/src/app/api/: crud.py  summaries.py
project/tests/: conftest.py  test_summaries.py
