[build-system]
requires      = [
    "setuptools>=65.5.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
description = "API for text summarization."
readme = "README.md"
authors = [{ name = "Daniel Ibarrola", email = "daniel.ibarrola.sanchez@gmail.com" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["text summarization"]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest"]


[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
